Fixed Spacing for better readability
as title says. also made minor tweaks to PU and LOF convo + PU activation log.

--- a/tabs.css
+++ b/tabs.css
@@ -29,5 +29,5 @@ font-size: 85%;
 .container .nav .nav-link:hover {
 border-width: 1px 1px 0px 1px !important;
 border-color: #653682 !important;
-{
+}
 	
